--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^9.3.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
@@ -48,17 +48,19 @@
     "prettier-loader": "^2.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-md5-hash": "0.0.6",
-    "react-router-dom": "^5.2.0"
+    "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2"
   }
 }
